--- a/src/stylesheets/homepage.css
+++ b/src/stylesheets/homepage.css
@@ -1,1 +1,51 @@
+header{
+    height: 20%;
+    background-color: indigo;
+    color: antiquewhite;
+    padding: 1rem 2rem;
+}
+header p{
+    font-size: 1.1rem;
+    padding: 1rem 2rem;
 
+}
+h1{
+    padding-bottom: 1rem;
+
+}
+
+.lg-btn{
+    background-color: antiquewhite;
+    text-decoration: none;
+    color: violet;
+    font-weight: bold;
+    font-size: 1.2rem;
+    padding: 1rem 2rem;
+    border-radius: .5rem;
+    margin: 2rem;
+}
+main{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-areas: 
+    "hdr1 hdr2"
+    "fig1 fig2";
+    
+}
+h2{
+grid-area: hdr2;
+}
+
+figure:nth-child(1){
+    grid-row: fig1;
+
+}
+
+figure:nth-child(2){
+    grid-row: fig1;
+    margin: 0 1rem;
+}
+
+img{
+    width: 100%;
+}
