--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1,1 +1,101 @@
 /* Your styles go here */
+*{
+box-sizing: border-box;
+margin: 0;
+padding: 0;
+}
+
+nav{
+text-align: center;
+}
+
+nav > a{
+text-decoration: none;
+color: black;
+font-size: 1.2rem;
+
+}
+
+.mainNav{
+    grid-column: 3/ span 1;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin: 0 1rem;
+}
+.mainNav a{
+    text-decoration: none;
+    justify-content: space-around;
+    list-style: none;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+body{
+
+}
+
+footer{
+    display: flex;
+    gap: 2rem;
+
+}
+.footer{
+    margin-top: 2rem;
+    display: flex;
+    list-style: none;
+    gap: 2.5 rem;
+}
+@media all and (min-width:600){
+    header{
+        height: 20%;
+        background-color: indigo;
+        color: antiquewhite;
+        padding: 1rem 2rem;
+    }
+    header p{
+        font-size: 1.1rem;
+        padding: 1rem 2rem;
+    
+    }
+    h1{
+        padding-bottom: 1rem;
+    
+    }
+    
+    .lg-btn{
+        background-color: antiquewhite;
+        text-decoration: none;
+        color: violet;
+        font-weight: bold;
+        font-size: 1.2rem;
+        padding: 1rem 2rem;
+        border-radius: .5rem;
+        margin: 2rem;
+    }
+    main{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-areas: 
+        "hdr1 hdr2"
+        "fig1 fig2";
+        
+    }
+    h2{grid-area: hdr2;
+    
+    }
+    figure:nth-child(1){
+        grid-row: fig1;
+        
+    }
+    
+    figure:nth-child(2){
+        grid-row: fig1;
+        margin: 0 1rem;
+    }
+    
+    img{
+        width: 100%;
+    }
+    
+}
