--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -17,18 +17,16 @@ font-size: 1.2rem;
 }
 
 .mainNav{
-    grid-column: 3/ span 1;
     display: flex;
-    justify-content: space-between;
-    list-style: none;
-    margin: 0 1rem;
-}
-.mainNav a{
-    text-decoration: none;
     justify-content: space-around;
     list-style: none;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin: 0 2rem;
+}
+
+.mainNav a{
+    text-decoration: none;
+     font-size: 1.2rem;
+    color: black;
 }
 
 body{
@@ -36,66 +34,85 @@ body{
 }
 
 footer{
+    margin-top: 2rem;
     display: flex;
     gap: 2rem;
+    justify-content: center;
 
 }
-.footer{
-    margin-top: 2rem;
+.footerNav{
     display: flex;
     list-style: none;
     gap: 2.5 rem;
 }
 @media all and (min-width:600){
-    header{
-        height: 20%;
-        background-color: indigo;
-        color: antiquewhite;
-        padding: 1rem 2rem;
-    }
-    header p{
-        font-size: 1.1rem;
-        padding: 1rem 2rem;
-    
-    }
-    h1{
-        padding-bottom: 1rem;
-    
-    }
-    
-    .lg-btn{
-        background-color: antiquewhite;
+nav{
+    display: grid;
+    grid-template-columns: repeat(3, 3fr);
+    align-items: center;
+}
+    nav > a{
         text-decoration: none;
-        color: violet;
-        font-weight: bold;
+        color: black;
         font-size: 1.2rem;
-        padding: 1rem 2rem;
-        border-radius: .5rem;
-        margin: 2rem;
+        padding-left: 2rem;
     }
-    main{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        grid-template-areas: 
-        "hdr1 hdr2"
-        "fig1 fig2";
-        
+    .mainNav{
+        grid-column: 3 / span 3;
+        display: flex;
+        justify-content: space-between;
+        list-style: none;
+        margin: 1rem;
     }
-    h2{grid-area: hdr2;
-    
-    }
-    figure:nth-child(1){
-        grid-row: fig1;
-        
-    }
-    
-    figure:nth-child(2){
-        grid-row: fig1;
-        margin: 0 1rem;
-    }
-    
-    img{
-        width: 100%;
-    }
+}
+
+header{
+    height: 20%;
+    background-color: indigo;
+    color: antiquewhite;
+    padding: 1rem 2rem;
+}
+header p{
+    font-size: 1.1rem;
+    padding: 1rem 2rem;
+
+}
+h1{
+    padding-bottom: 1rem;
+
+}
+
+.lg-btn{
+    background-color: antiquewhite;
+    text-decoration: none;
+    color: violet;
+    font-weight: bold;
+    font-size: 1.2rem;
+    padding: 1rem 2rem;
+    border-radius: .5rem;
+    margin: 2rem;
+}
+main{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-areas: 
+    "hdr1 hdr2"
+    "fig1 fig2";
+}
+h2{grid-area: hdr2;
+
+}
+figure:nth-child(1){
+    grid-row: fig1;
     
 }
+
+figure:nth-child(2){
+    grid-row: fig1;
+    margin: 0 1rem;
+}
+
+img{
+    width: 100%;
+}
+
